hw19/old/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arch-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "3"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /profile(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: profile-service
                port:
                  number: 80
